@@ -464,6 +464,10 @@ surface_tridomain.m
 
 	 SURFACE_TRIDOMAIN  Triangular mesh to cover a planar or spherical domain
 	
+triconncomp.m
+
+	 TRICONNCOMP  Find connected components in mesh
+	
 trihemisphere.m
 
 	 TRIHEMISPHERE  Triangular mesh on hemisphere with roughly uniformly
